--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <article>
 
       <!-- 
-        - #HERO
+        - #HERO#
       -->
 
       <section class="section hero bg-dark has-after has-bg-image" id="home" aria-label="hero" data-section
