--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             </div>
 
             <address class="address footer-link">
-              1247/Plot No. 39, 15th Phase, Colony, Kukatpally, Hyderabad
+              466 Amani Court Nairobi Kenya
             </address>
           </li>
 
@@ -638,7 +638,7 @@
             <div>
               <a href="tel:18001213637" class="footer-link">1800-121-3637</a>
 
-              <a href="tel:+915552348765" class="footer-link">+91 555 234-8765</a>
+              <a href="tel:+915552348765" class="footer-link">+254 792851033</a>
             </div>
           </li>
 
@@ -706,7 +706,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 Fitlife. All Rights Reserved By <a href="#" class="copyright-link">codewithsadee.</a>
+          &copy; 2022 Fitlife. All Rights Reserved By <a href="#" class="copyright-link">codewithmanoti.</a>
         </p>
 
         <ul class="footer-bottom-list">
